# MathematicalModeling

./: CMakeLists.txt  README.md  main.cpp
lib/: Fraction.cpp  Fraction.h
util/: print.hpp  tuple_visit.hpp
week00/: CrossRiver.cpp  CrossRiver.h
week01/: SheepDistribution.cpp  SheepDistribution.h
